syntax = "proto3";

option csharp_namespace = "AnaliseRpc";

package analise;

service Analise {
  rpc AnalisarDados (DadosParaAnalise) returns (ResultadoAnalise);
  rpc AnalisarDadosPorTipo (DadosParaAnalise) returns (ResultadoAnalisePorTipo);
}

message DadosParaAnalise {
  string wavy_id = 1;
  string tipo = 2;
  string data_inicio = 3;
  string data_fim = 4;
}

message ResultadoAnalise {
  double media = 1;
  int32 total_amostras = 2;
  string resumo = 3;
}

message TipoMedia {
  string tipo = 1;
  double media = 2;
  int32 total_amostras = 3;
}

message ResultadoAnalisePorTipo {
  repeated TipoMedia medias_por_tipo = 1;
}
